chore: making color blue if screen size is <=600

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
 <head>
-    <title></title>
+    <title>Daniel Camargo</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
-    <h1>Hello World 2</h1>
+    <h1>Hello World</h1>
 </body>
 
 </html>
