feat: adding footer - wip

--- a/index.html
+++ b/index.html
@@ -9,7 +9,61 @@
 </head>
 
 <body>
-    <h1>Hello World</h1>
+    <div class="content">
+        <nav class="navbar">nav</nav>
+        <header class="hero">hero</header>
+        <main class="main">
+            <section class="skills">Skills</section>
+            <section class="projects">Projects</section>
+            <section class="contact">Contact</section>
+        </main>
+        <footer class="footer footer--purple">
+            <div class="footer__wave">
+                <svg class="footer__wave_svg" viewBox="0 0 1440 251" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M0 65.5664L60 52.0944C120 38.6224 240 12.2908 360 3.71769C480 -5.46775 600 3.71769 720 16.5773C840 30.0493 960 47.8078 1080 52.0944C1200 56.3809 1320 47.8078 1380 43.5213L1440 38.6224V250.5H1380C1320 250.5 1200 250.5 1080 250.5C960 250.5 840 250.5 720 250.5C600 250.5 480 250.5 360 250.5C240 250.5 120 250.5 60 250.5H0V65.5664Z"
+                        fill="currentColor" />
+                </svg>
+            </div>
+            <div class="footer_content">
+                <div class="footer_social">
+                    <h2 class="footer_social__title">My social media links:</h2>
+                    <div class="footer_social_icons">
+                        <span>
+                            <svg width="30" height="30" viewBox="0 0 30 30" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M27.2863 0H2.71374C1.215 0 0 1.215 0 2.71374V27.2862C0 28.785 1.215 30 2.71374 30H27.2862C28.785 30 30 28.785 30 27.2862V2.71374C30 1.215 28.785 0 27.2863 0ZM9.28327 25.904C9.28327 26.3402 8.92971 26.6937 8.49353 26.6937H5.13181C4.69563 26.6937 4.34207 26.3402 4.34207 25.904V11.8118C4.34207 11.3756 4.69563 11.022 5.13181 11.022H8.49353C8.92971 11.022 9.28327 11.3756 9.28327 11.8118V25.904ZM6.81267 9.69361C5.04887 9.69361 3.61901 8.26374 3.61901 6.49995C3.61901 4.73615 5.04887 3.30628 6.81267 3.30628C8.57647 3.30628 10.0063 4.73615 10.0063 6.49995C10.0063 8.26374 8.57654 9.69361 6.81267 9.69361ZM26.8516 25.9676C26.8516 26.3686 26.5264 26.6937 26.1254 26.6937H22.5181C22.1171 26.6937 21.7919 26.3686 21.7919 25.9676V19.3575C21.7919 18.3715 22.0812 15.0365 19.215 15.0365C16.9918 15.0365 16.5408 17.3192 16.4503 18.3436V25.9676C16.4503 26.3686 16.1252 26.6937 15.7242 26.6937H12.2352C11.8342 26.6937 11.5091 26.3686 11.5091 25.9676V11.7481C11.5091 11.3471 11.8342 11.022 12.2352 11.022H15.7242C16.1252 11.022 16.4503 11.3471 16.4503 11.7481V12.9776C17.2747 11.7404 18.4998 10.7855 21.1083 10.7855C26.8846 10.7855 26.8516 16.1821 26.8516 19.1472V25.9676Z"
+                                    fill="white" />
+                            </svg>
+                        </span>
+
+                        <span>
+                            <svg width="30" height="30" viewBox="0 0 30 30" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <g clip-path="url(#clip0_401_200)">
+                                    <path
+                                        d="M4.40904 24.1866L4.83954 23.1821L4.22665 22.2772C2.76895 20.1251 2 17.6184 2 15C2 11.5238 3.34949 8.26561 5.80756 5.80759C8.26567 3.34953 11.5238 2 15 2C18.4762 2 21.7344 3.34954 24.1924 5.80756C26.6504 8.26569 28 11.5238 28 15C28 18.4762 26.6504 21.7343 24.1924 24.1924C21.7344 26.6505 18.4762 28 15 28C12.2899 28 9.71296 27.1818 7.51472 25.6292L6.55827 24.9537L5.50107 25.4571L3.44496 26.4362L4.40904 24.1866ZM0.500026 29.5001L0.500008 29.5L0.499976 29.5L0.500026 29.5001Z"
+                                        stroke="white" stroke-width="4" />
+                                    <path
+                                        d="M22.9917 20.0766L22.5421 17.6414C22.5049 17.4403 22.349 17.282 22.1484 17.2419L18.613 16.5348C18.4488 16.5021 18.2795 16.5534 18.1613 16.6716L16.7249 18.108C14.3048 17.0236 12.9616 15.6776 11.7798 13.1536L13.2115 11.7218C13.3298 11.6036 13.3811 11.4341 13.3483 11.2701L12.6412 7.73459C12.6011 7.53403 12.4428 7.37811 12.2416 7.34096L9.80643 6.89137C9.73975 6.87906 9.67107 6.88041 9.60486 6.89547C8.96186 7.0416 8.37516 7.36557 7.90822 7.83262C7.09957 8.64127 6.79055 9.82117 7.01455 11.2449C7.3906 13.6356 8.56195 16.9627 10.7229 19.1322L10.7523 19.1615C12.9203 21.321 16.2473 22.4924 18.638 22.8685C18.9392 22.9159 19.2294 22.9394 19.5074 22.9394C20.5442 22.9394 21.4127 22.6124 22.0504 21.9748C22.5174 21.5078 22.8414 20.9211 22.9875 20.2781C23.0026 20.212 23.004 20.1433 22.9917 20.0766Z"
+                                        fill="white" />
+                                </g>
+                                <defs>
+                                    <clipPath id="clip0_401_200">
+                                        <rect width="30" height="30" fill="white" />
+                                    </clipPath>
+                                </defs>
+                            </svg>
+                        </span>
+                    </div>
+                </div>
+                <div class="footer_more_projects">
+                    Col 2
+                </div>
+            </div>
+        </footer>
+    </div>
 </body>
 
 </html>
