--- a/index.html
+++ b/index.html
@@ -1,72 +1,44 @@
 <!doctype html>
-<html>
+<html lang="eng">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
-    <style type="text/tailwindcss">
-        @layer components {
-          .button {
-            @apply mt-8 bg-red-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-400 px-6 py-4 tracking-wider rounded text-white text-lg hover:bg-red-500 active:bg-red-700;
-          }
-        }
-      </style>
+    <title>Daniel Teleginski Camargo</title>
 </head>
 
 <body>
-    <div class="p-12">
-        <div id="outcome"></div>
+    <div class="bg-red-500 h-20">
+        <input id="email" type="text" />
+        <button onclick="">Validate Email</button>
     </div>
-    <script>
-        const input = [5, 3, 2, 1, 8, 12, 11, 4]
-        const output = [1, 2, 3, 4, 5, 8, 11, 12]
-        const outcome = document.getElementById("outcome")
-        function sort(collection) {
-            appendLine(JSON.stringify(input));
-            // sort the collection
-
-            for (let i = 0; i < collection.length; i++) {
-                appendLine('i=' + i)
-                let swapped = false;
-                let highestPastValue = null
-                for (let j = 0; j < collection.length - 1; j++) {
-                    if (highestPastValue === null) {
-                        highestPastValue = collection[j]
-                    }
-                    if (collection[j] > highestPastValue) {
-                        highestPastValue = collection[j]
-                    }
-
-                    const k = collection[j] + ">" + collection[j + 1] + "?: "
-                    if (collection[j] > collection[j + 1]) {
-                        swap(collection, j, j + 1);
-                        swapped = true;
-                    }
-                    const str2 = "(" + j + "," + (j + 1) + ") " + k + JSON.stringify(collection);
-                    appendLine(str2);
-                }
-                if (!swapped) {
-                    break;
-                }
-
-            }
-
-        }
-        function appendLine(str) {
-            const line = document.createElement("pre");
-            line.innerText = str;
-            outcome.appendChild(line);
-        }
-
-        function swap(collection, indexA, indexB) {
-            const i = collection[indexA];
-            collection[indexA] = collection[indexB];
-            collection[indexB] = i;
-        }
-
-        sort(input);
-    </script>
 </body>
+
+<script>
+    const removeElementAt = function (arr, index) {
+        arr.splice(index, 1);
+    }
+
+    // [Java] is very very very very very very different from [Javascript]
+    const removeDuplicates = function (arr) {
+        console.log("Remove duplicates");
+        for (let i = 0; i < arr.length; i++) {
+            for (let j = i + 1; j < arr.length; j++) {
+                console.log("i eq j?", `(${i}, ${j})`, arr[i], arr[j])
+                if (arr[i] === arr[j]) {
+                    removeElementAt(arr, i);
+                }
+            }
+            console.log(`After round ${i}:`, arr);
+        }
+        console.log("Duplicates removed: ", arr);
+        return arr;
+    }
+    // Let's call it
+    const a = [1, 3, 3, 4, 5, 4, 7]
+    removeDuplicates(a); // Expect to see: [1, 3, 4, 5, 7]
+
+</script>
 
 </html>
