--- a/index.html
+++ b/index.html
@@ -6,46 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="dist/output.css" rel="stylesheet">
     <title>Daniel Teleginski Camargo</title>
+    <script src="/scripts/masks.js" defer></script>
 </head>
 
-<body>
-    <div class="max-w-7xl mx-auto">
-        <header class="py-6">
-            <nav class="py-4 px-12 space-x-4 flex justify-center items-center h-20">
-                <a href="#skills"
-                    class="text-gray-500 border-b-2 border-transparent hover:text-gray-900 focus:outline-none focus:border-gray-500 font-medium">Skills</a>
-                <a href="#projects"
-                    class="text-gray-500 border-b-2 border-transparent hover:text-gray-900 focus:outline-none focus:border-gray-500 font-medium">Projects</a>
-                <a href="#contact"
-                    class="text-gray-500 border-b-2 border-transparent hover:text-gray-900 focus:outline-none focus:border-gray-500 font-medium">Contact</a>
-            </nav>
-            <div
-                class="flex flex-col lg:flex-row-reverse w-full justify-center items-center lg:justify-between py-8 px-4 space-y-12 lg:space-y-0">
-                <div class="max-h-[25em] max-w-[25em] overflow-hidden">
-                    <img src="avatar.png" alt="My Picture" class="object-cover" />
-                </div>
-                <div class="flex flex-col items-center justify-center lg:items-start lg:justify-between space-y-12">
-                    <h1 class="text-5xl text-gray-900">Daniel Camargo</h1>
-                    <p class="max-w-[24em] text-2xl text-gray-500 text-center lg:text-left">
-                        I’m a software developer and here is my portfolio website. Here you’ll learn about my journey as
-                        a
-                        software developer.
-                    </p>
-                    <button
-                        class="bg-red-600 hover:bg-red-500 active:bg-red-700 py-4 px-8 text-base rounded text-white font-semibold focus:outline-none focus:ring-2 focus:ring-red-600 focus:ring-offset-1 w-full lg:w-auto">Hire
-                        me</button>
-                </div>
-            </div>
-        </header>
-        <!-- skills -->
-        <div class="h-96 w-full bg-red-100">skills</div>
-        <!-- projects -->
-        <div class="h-96 w-full bg-green-100">projects</div>
-        <!-- contact -->
-        <div class="h-96 w-full bg-blue-100">contact</div>
-        <!-- footer -->
-        <footer class="h-96 w-full bg-amber-700">footer</footer>
-    </div>
+<body class="p-12">
+    <input type="text" oninput="phoneNumber(this)" />
+    <button
+        class="inline-flex items-center justify-center rounded-md border font-medium shadow-bottom-sm focus:outline-none focus:ring-2 focus:ring-offset-2 border-transparent bg-red-600 text-white hover:bg-red-500 focus:bg-red-600 active:bg-red-700 px-4 py-2 text-base leading-base disabled:opacity-50"
+        onclick="sendEmail(this)">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+            class="icon w-3 h-3 animate-spin mr-2 hidden">
+            <path stroke-linecap="round" stroke-linejoin="round"
+                d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0l3.181 3.183a8.25 8.25 0 0013.803-3.7M4.031 9.865a8.25 8.25 0 0113.803-3.7l3.181 3.182m0-4.991v4.99" />
+        </svg>
+        <span class="send">Send</span>
+        <span class="sending hidden">Sending...</span>
+    </button>
 </body>
 
 </html>
