--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="dist/output.css" rel="stylesheet">
     <title>Daniel Teleginski Camargo</title>
-    <script src="/scripts/masks.js" defer></script>
+    <script src="/scripts/actions.js" defer></script>
     <script src="/scripts/files.js" defer></script>
+    <script src="/scripts/masks.js" defer></script>
 </head>
 
 <body class="p-12">
